--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <script src="https://kit.fontawesome.com/e1fe5e848b.js" crossorigin="anonymous"></script>
+  
   <script src="lib/react.development.js"></script>
   <script src="lib/react-dom.development.js"></script>
+  <script src="lib/history.js"></script>
+  <script src="lib/react-router.js"></script>
+  <script src="lib/react-router-dom.js"></script>
 
   <link rel="stylesheet" href="assets/style/main.css">
   <title>React Starter</title>
